[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art/UI/ButtonBG.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Levels/Main.gd" type="Script" id=2]
[ext_resource path="res://Art/MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://Art/UI/MenuBackground.png" type="Texture" id=4]
[ext_resource path="res://Sound/Start.mp3" type="AudioStream" id=5]
[ext_resource path="res://ShadowedTextureButton.gd" type="Script" id=9]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="SelectionTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="StartSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -306.0
margin_top = -262.0
margin_right = 306.0
margin_bottom = 262.0
custom_constants/separation = 25

[node name="CenterContainer" type="CenterContainer" parent="UI/VBoxContainer"]
margin_right = 612.0
margin_bottom = 111.0

[node name="PlayButton" type="TextureButton" parent="UI/VBoxContainer/CenterContainer"]
margin_left = 56.0
margin_right = 556.0
margin_bottom = 111.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="UI/VBoxContainer/CenterContainer/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -27.5
margin_right = 61.0
margin_bottom = 27.5
text = "Play"

[node name="CenterContainer2" type="CenterContainer" parent="UI/VBoxContainer"]
margin_top = 136.0
margin_right = 612.0
margin_bottom = 247.0

[node name="QuitButton" type="TextureButton" parent="UI/VBoxContainer/CenterContainer2"]
margin_left = 56.0
margin_right = 556.0
margin_bottom = 111.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="UI/VBoxContainer/CenterContainer2/QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -27.5
margin_right = 61.0
margin_bottom = 27.5
text = "Quit"

[node name="MobilePopup" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
popup_exclusive = true

[node name="ColorRect" type="ColorRect" parent="MobilePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -200.0
margin_right = 600.0
margin_bottom = 200.0

[node name="Label" type="Label" parent="MobilePopup/ColorRect"]
anchor_right = 1.0
margin_top = 50.0
margin_bottom = 163.0
text = "You are trying to play on mobile
This is not supported sadly
Please use a computer"
align = 1

[node name="Exit" type="Button" parent="MobilePopup/ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -67.0
margin_top = -100.0
margin_right = 67.0
margin_bottom = -39.0
text = "Quit"

[connection signal="timeout" from="SelectionTimer" to="." method="_on_SelectionTimer_timeout"]
[connection signal="finished" from="StartSoundPlayer" to="." method="_on_StartSoundPlayer_finished"]
[connection signal="pressed" from="UI/VBoxContainer/CenterContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/CenterContainer2/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="MobilePopup/ColorRect/Exit" to="." method="_on_QuitButton_pressed"]
